force-app/main/default/objects/Building_Photo__c/Building_Photo__c.object-meta.xml
<CustomObject>
    <label>Building Photo</label>
    <nameField>
        <displayFormat>BP-{00000}</displayFormat>
        <label>Building Photo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Building Photos</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>