force-app/main/default/objects/Building_Photo__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Building Photos</relationshipLabel>
    <relationshipName>Building_Photos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>