force-app/main/default/objects/Building_Photo__c/fields/Building_Photo_Date__c.field-meta.xml
<CustomField>
    <fullName>Building_Photo_Date__c</fullName>
    <label>Building Photo Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>