force-app/main/default/objects/Building_Photo__c/fields/Building_Photo_Source__c.field-meta.xml
<CustomField>
    <fullName>Building_Photo_Source__c</fullName>
    <label>Building Photo Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MLS</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>