force-app/main/default/objects/Building_Photo__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <formula>HYPERLINK(File_Location_Formula__c, File_Name_Formula__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Location</label>
    <type>Text</type>
</CustomField>