force-app/main/default/objects/Building_Photo__c/fields/File_Location_Formula__c.field-meta.xml
<CustomField>
    <fullName>File_Location_Formula__c</fullName>
    <label>File Location Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>