force-app/main/default/objects/Building_Photo__c/fields/Photos_Description__c.field-meta.xml
<CustomField>
    <fullName>Photos_Description__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Building_Photo__c/&apos;+Id+&apos;/view&apos;,  Building__r.Name+ &apos; Building Photo&apos;,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photos Description</label>
    <type>Text</type>
</CustomField>